--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -1,6 +1,7 @@
 .homeHeaderContainer {
     height: 180px;
     width: 100%;
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -425,6 +426,7 @@
 .homeHeaderContainerListing {
     height: 80px;
     width: 100%;
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
