--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -2,6 +2,7 @@
     min-height: 700px;
     height: 100vh;
     width: 100%;
+    max-width: 1800px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
