--- a/client/src/Components/Pages/HostingDashboard.css
+++ b/client/src/Components/Pages/HostingDashboard.css
@@ -1,6 +1,7 @@
 .hostingDashboardContainer {
     min-height: 100%;
     width: 100%;
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
