--- a/client/src/Components/Pages/Profile.css
+++ b/client/src/Components/Pages/Profile.css
@@ -1,6 +1,7 @@
 .profileContainer {
     min-height: 100vh;
     width: 100%;
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
