--- a/client/src/Components/Sub-Components/HomeBody.css
+++ b/client/src/Components/Sub-Components/HomeBody.css
@@ -23,37 +23,37 @@
 
 @media screen and (min-width: 2100px) {
     .homeBodyContainer {
-      grid-template-columns: repeat(6, 1fr)
+        grid-template-columns: repeat(6, 1fr);
+        padding: 0 80px;
     }
 }
 
 @media screen and (max-width: 2100px) {
     .homeBodyContainer {
-      grid-template-columns: repeat(5, 1fr)
+        grid-template-columns: repeat(5, 1fr);
     }
 }
 
 @media screen and (max-width: 1450px) {
     .homeBodyContainer {
-      grid-template-columns: repeat(4, 1fr)
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
 @media screen and (max-width: 1150px) {
     .homeBodyContainer {
-      grid-template-columns: repeat(3, 1fr)
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media screen and (max-width: 900px) {
     .homeBodyContainer {
-        grid-template-columns: repeat(2, 1fr)
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-
 @media screen and (max-width: 600px) {
     .homeBodyContainer {
-        grid-template-columns: repeat(1, 1fr)
+        grid-template-columns: repeat(1, 1fr);
     }
 }
