--- a/client/src/Components/Pages/Login.css
+++ b/client/src/Components/Pages/Login.css
@@ -119,3 +119,27 @@
         cursor: pointer;
         margin-left: 20px;
     }
+
+    .homeBodySpinnerContainer {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 100;
+        top: 70px;
+    }
+
+@media screen and (max-width: 450px) {
+    .loginContainer {
+        width: 370px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .loginContainer {
+        width: 340px;
+        padding: 24px;
+    }
+}
