--- a/client/src/Components/Pages/Signup.css
+++ b/client/src/Components/Pages/Signup.css
@@ -26,18 +26,18 @@
 }
 
 .signupContainer {
-        height: 600px;
-        width: 500px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        background-color: white;
-        border-radius: 10px;
-        position: absolute;
-        padding: 30px 40px;
-        padding-bottom: 20px;
-    }
+    height: 700px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    position: absolute;
+    padding: 30px 40px;
+    padding-bottom: 20px;
+}
 
     .signupPageTitle {
         width: 100%;
@@ -129,5 +129,30 @@
 
     .signupFormLogText:hover {
         transition: 0.1s linear;
-        color: rgba(0, 0, 0, 0.5)
+        color: rgba(0, 0, 0, 0.5);
     }
+
+    .homeBodySpinnerContainer {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 100;
+        top: 70px;
+    }
+
+@media screen and (max-width: 520px) {
+    .signupContainer {
+        width: 400px;
+        padding: 24px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .signupContainer {
+        width: 350px;
+        padding: 18px;
+    }
+}
