--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -1092,6 +1092,7 @@
                 background-color: rgb(244, 244, 244);
                 z-index: 99;
                 padding: 20px 20px;
+                padding-bottom: 80px;
             }
 
             .homeHeader1SearchContainerMediaFullIconContainer {
