--- a/client/src/Components/Sub-Components/ProfileBody.css
+++ b/client/src/Components/Sub-Components/ProfileBody.css
@@ -422,6 +422,12 @@
                         color: var(--gray);
                     }
 
+                    .noListingsText {
+                        position: absolute;
+                        left: 50%;
+                        transform: translateX(-50%);
+                    }
+
 .profileBodyRightIntroContainer2 {
     display: none;
 }
