--- a/client/src/Components/Pages/Checkout.css
+++ b/client/src/Components/Pages/Checkout.css
@@ -665,6 +665,20 @@
         z-index: 99;
     }
 
+    .homeFooterContainerCheckout {
+        height: 60px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        bottom: 0;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: white;
+    }
+
+
 .checkoutListingContainer {
     display: none;
 }
