--- a/client/src/Components/Pages/HostingDashboard.css
+++ b/client/src/Components/Pages/HostingDashboard.css
@@ -27,6 +27,7 @@
         padding: 0px 60px;
         border-bottom: 1px solid rgba(160, 160, 160, 0.4);
         margin-bottom: 40px;
+        position: relative;
     }
 
         .hostingDashboardHeaderLogo {
