--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -454,6 +454,7 @@
             align-items: center;
             border-bottom: 1.5px solid rgba(100, 100, 100, 0.1);
             padding: 0 80px;
+            position: relative;
         }
 
         .homeHeader1LogoContainer {
